# Console_Minesweeper

./: CMakeLists.txt  how_to_start.txt
src/headers/: minesweeper.h
src/sources/: Application.cpp  minesweeper.cpp
